# python-mockserver-friendly-client

./: .gitignore  .travis.yml  README.md  constraints.txt  docker-compose.yml  setup.cfg  test-constraints.txt  test-requirements.txt  test-runner.sh  tox.ini
mockserver/: __init__.py
mockserver_friendly/: __init__.py
test/: __init__.py  test.py  test_basic_expectations.py  test_basic_responses.py  test_basic_stubbing.py  test_basic_verifying.py  test_delays.py  test_form_requests.py  test_json_requests.py  test_json_response.py
