[metadata]
name = mockserver-client
url = https://github.com/internap/python-mockserver-friendly-client
author = INAP
author-email = opensource@internap.com
summary = Friendly python client to James D. Bloom's awesome MockServer
description-file =
    README.md
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Testing

[files]
packages =
    mockserver

[nosetests]
logging-level = DEBUG
